# contents of a minimal pyproject.toml 

[build-system] 
requires = ["hatchling"] 
build-backend = "hatchling.build" 

[project] 
name = "example_package_johannabeam" 
dependencies = ["numpy"]
dynamic = ["version"] 

[tool.hatch]
version.path = "src/example_package_johannabeam/__init__.py"

# In pyproject.toml

[project.optional-dependencies]
test = ["pytest"]
